--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -6,7 +6,7 @@ of = of
 welcome.visitors = Welcome Visitor
 profile = My Profile
 exit = Exit
-add.restaurant = Add your restaurant
+add.restaurant = Add a restaurant
 my.restaurant = My Restaurants
 submit = Submit
 login = Login
@@ -219,3 +219,6 @@ error = Error
 info = Restaurant info
 home = Home Page
 results = Search's results
+classify.position = Ranking position
+ristorante.getvoto = Restaurant score
+maps = Map
