--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -6,7 +6,7 @@ of = di
 welcome.visitors = Benvenuto visitatore
 profile = Il Mio Profilo
 exit = Esci
-add.restaurant = Aggiungi ristorante
+add.restaurant = Aggiungi un ristorante
 restaurant.of = Ristoranti di
 my.restaurant = I miei ristoranti
 submit = Invia
@@ -219,3 +219,7 @@ error = Errore
 info = Info ristorante
 home = Pagina principale
 results = Risultati ricerca
+classify.position = Posizione in classifica
+ristorante.getvoto = Voto ristorante
+maps = Mappa
+
