Aggiunta possibilità di gestire cucine, corretta applicazione notifiche

--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -222,3 +222,16 @@ results = Search's results
 classify.position = Ranking position
 ristorante.getvoto = Restaurant score
 maps = Map
+spec.di = Speciality of
+rimuovi.spec = Remove speciality
+add.spec = Add speciality
+gestisci.spec = Configure speciality
+delete = Delete
+rist = Restaurants
+pizz = Pizza
+trat = Diner
+pesc = Fish
+tave = Tavern
+poll = Chicken
+chin = Chinese
+japa = Japanese
