--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -222,4 +222,16 @@ results = Risultati ricerca
 classify.position = Posizione in classifica
 ristorante.getvoto = Voto ristorante
 maps = Mappa
-
+spef.di = Specialit\u00e0 di
+rimuovi.spec = Rimuovi specialit\u00e0
+add.spec = Aggiungi specialit\u00e0
+gestisci.spec = Gestisci specialit\u00e0
+delete = Cancella
+rist = Ristorante
+pizz = Pizzeria
+trat = Trattoria
+pesc = Pesce
+tave = Taverna
+poll = Polleria
+chin = Cinese
+japa = Giapponese
