Aggiunta possibilità di registrare ristorante con specialità

--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -226,6 +226,7 @@ spec.di = Speciality of
 rimuovi.spec = Remove speciality
 add.spec = Add speciality
 gestisci.spec = Configure speciality
+spec = Speciality
 delete = Delete
 rist = Restaurants
 pizz = Pizza
