--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -222,11 +222,12 @@ results = Risultati ricerca
 classify.position = Posizione in classifica
 ristorante.getvoto = Voto ristorante
 maps = Mappa
-spef.di = Specialit\u00e0 di
+spec.di = Specialit\u00e0 di
 rimuovi.spec = Rimuovi specialit\u00e0
 add.spec = Aggiungi specialit\u00e0
 gestisci.spec = Gestisci specialit\u00e0
 delete = Cancella
+spec = Specialit\u00e0
 rist = Ristorante
 pizz = Pizzeria
 trat = Trattoria
