--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -237,3 +237,5 @@ poll = Chicken
 chin = Chinese
 japa = Japanese
 mod.complete = Changes complete
+return.info = Back to restaurant's page
+return.profile = Back to your profile
