--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -237,3 +237,5 @@ poll = Polleria
 chin = Cinese
 japa = Giapponese
 mod.complete = Modifiche completate
+return.info = Ritorna alla pagina del ristorante
+return.profile = Ritorna al profilo
