Orari per gittinaaaa

--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -239,3 +239,5 @@ japa = Japanese
 mod.complete = Changes complete
 return.info = Back to restaurant's page
 return.profile = Back to your profile
+number.field = Number hours to insert
+prop = Property of
