--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -239,3 +239,5 @@ japa = Giapponese
 mod.complete = Modifiche completate
 return.info = Ritorna alla pagina del ristorante
 return.profile = Ritorna al profilo
+number.field = Numero orari da inserire
+prop = Proprietario
