--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -241,3 +241,4 @@ return.info = Back to restaurant's page
 return.profile = Back to your profile
 number.field = Number hours to insert
 prop = Property of
+go.profile = Go to your profile
