--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -241,3 +241,4 @@ return.info = Ritorna alla pagina del ristorante
 return.profile = Ritorna al profilo
 number.field = Numero orari da inserire
 prop = Proprietario
+go.profile = Vai al profilo
