--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -242,3 +242,4 @@ return.profile = Back to your profile
 number.field = Number hours to insert
 prop = Property of
 go.profile = Go to your profile
+not.available = Not available
