--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -242,3 +242,4 @@ return.profile = Ritorna al profilo
 number.field = Numero orari da inserire
 prop = Proprietario
 go.profile = Vai al profilo
+not.available = Non disponibile
