Il mio bel pome

--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -243,3 +243,5 @@ number.field = Number hours to insert
 prop = Property of
 go.profile = Go to your profile
 not.available = Not available
+new.email = Receive a new mail
+rec.new.email = Send!
