--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -243,3 +243,5 @@ number.field = Numero orari da inserire
 prop = Proprietario
 go.profile = Vai al profilo
 not.available = Non disponibile
+new.mail = Ricevi nuova mail
+rec.new.email = Spedisci!
