Buonanotte a tuti sinti

--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -245,3 +245,6 @@ go.profile = Go to your profile
 not.available = Not available
 new.email = Receive a new mail
 rec.new.email = Send!
+non.disponibile = Not available
+invia = Send
+segnala = Report foto
