--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -245,3 +245,6 @@ go.profile = Vai al profilo
 not.available = Non disponibile
 new.mail = Ricevi nuova mail
 rec.new.email = Spedisci!
+non.disponibile = Non disponibile
+invia = Invia
+segnala = Segnala foto
