--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -79,9 +79,9 @@ decreasing = Decreasing
 crescent = Crescent
 filter.by.economy = Filter by Economy Zone
 all = All
-economy = Economy
-normal = Normal
-luxury = Luxury
+eco = Economy
+mid = Normal
+lux = Luxury
 filter.by.specialty = Filter by Specialty
 reviews = Recensioni
 map = Map
@@ -248,3 +248,36 @@ rec.new.email = Send!
 non.disponibile = Not available
 invia = Send
 segnala = Report foto
+error.loading = Loading error, retry
+error.internal = Internal error, retry
+missing.name = Name can not be to short or empty
+missing.descr = Description can not be to short or empty
+missing.foto = Foto fields can not be empty
+missing.addr = Incorrect address
+nome.uso = This name was already taken
+missing.spec = Select at least one speciality
+restaurant.added = Restaurant added correcly
+name.corto = Name to short
+descr.corto = Description to short
+cognome.corto = Surname to short
+invalid.mail = Invalid email address
+old.psw.inv = Invalid old password
+psw.corr = The two password are not equals
+min.length = The minimun password's length in 8 characters
+reg.conf = Registration confirmation
+error.not = Error applying notify 
+not.revote.today = You cannot vote today, go back tomorrow
+vote.reg = Your vote has been registered
+err.ins.vote = Error inserting your vote
+non.rec = You cannot revote this review
+foto.segnalata = The photo has been reported to an administrator
+not.prop.rist = Your aren't the owner of this restaurants
+reg.success = Registration executed, check your mail
+recl.ok = Your request will be evaluated by an administrator
+just.recl = This restaurant has been just reclaimed by an other user
+new.pass.mail = Your new password
+tit.short = Title to short
+rec.short = Review to short
+rec1 = No text inserted
+rec2 = Your comment will be approved by an administrator
+act.log = Account activated, log in
