--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -80,9 +80,9 @@ decreasing = Decrescente
 crescent = Crescente
 filter.by.economy = Filtra per Fascia
 all = Tutti
-economy = Economica
-normal = Normale
-luxury = Lussuosa
+eco = Economica
+mid = Normale
+lux = Lussuosa
 filter.by.specialty = Filtra per specialita'
 reviews = Recensioni
 map = Mappa
@@ -248,3 +248,37 @@ rec.new.email = Spedisci!
 non.disponibile = Non disponibile
 invia = Invia
 segnala = Segnala foto
+error.loading = Errore nel caricamento, riprova
+error.internal = Errore interno, riprova
+missing.name = Nome troppo corto o inesistente
+missing.descr = Descrizione troppo corta o inesistente
+missing.foto = I campi delle foto non possono essere vuoti
+missing.addr = Indirizzo non corretto
+nome.uso = Nome gi\u00e0 in uso
+missing.spec = Selezione almeno una specialit\u00e0
+restaurant.added = Ristorante aggiunto correttamente
+name.corto = Nome troppo corto
+descr.corto = Descrizione troppo corta
+cognome.corto = Cognome troppo corto
+invalid.mail = Indirizzo email invalido
+old.psw.inv = Vecchia password errata
+psw.corr = Le due password non corrispondono
+min.length = La lunghezza minima della password \u00e8 8 caratteri
+reg.conf = Conferma registrazione
+rec.your = Non puoi recensire un tuo ristorante
+error.not = Errore applicazione notifica
+not.revote.today = Non puoi votare oggi, torna domani
+vote.reg = Il tuo voto \u00e8 stato registrato
+err.ins.vote = Errore inserimento voto
+non.rec = Non puoi rivotare questa recensione
+foto.segnalata = La foto \u00e8 stata segnalata ad un amministratore
+not.prop.rist = Non sei il proprietario del ristorante
+reg.success = Registazione effettuata, controlla la mail
+recl.ok = La tua richiesta sar\u00e0 valutata da un amministratore
+just.recl = Questo ristorante \u00e8 gi\u00e0 stato reclamato da un altro utente
+new.pass.mail = La tua nuova password
+tit.short = Titolo troppo corto
+rec.short = Recensione troppo corta
+rec1 = Nessun testo inserito
+rec2 = Il tuo commento sar\u00e0 approvato da un amministratore
+act.log = Account attivato, esegui il login
