--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -92,11 +92,11 @@ description = Descrizione
 how.many.timetables = Quanti orari devi inserire?
 upload.main.photo = Carica la foto principale del tuo Locale
 photo.description = Descrizione Foto
-monday = Lunedi'
-tuesday = Martedi'
-wednesday = Mercoledi'
-thursday = Giovedi'
-friday = Venerdi'
+monday = Luned\u00ec
+tuesday = Marted\u00ec
+wednesday = Mercoled\u00ec
+thursday = Gioved\u00ec
+friday = Venerd\u00ec
 saturday = Sabato
 sunday = Domenica
 add.from = Dalle
