--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -159,7 +159,7 @@ answer = Restaurateur answer
 bandiera = /img/flags/GB.png
 language = English (GB)
 receiving = I'm fetching your position, wait a few second please ...
-received = Received
+received = Position received
 getLoc = Search near you
 users.posClass = Ranking
 no.img = No Image
@@ -281,3 +281,7 @@ rec.short = Review to short
 rec1 = No text inserted
 rec2 = Your comment will be approved by an administrator
 act.log = Account activated, log in
+refine=Refine search
+most.visited=Most visited
+near=Near
+place=Insert place ...
