--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -159,7 +159,7 @@ answer = Risposta ristoratore
 bandiera = /img/flags/IT.png
 language = Italiano
 receiving = Sto acquisendo la posizione, aspetta qualche secondo ...
-received = Ricevuta
+received = Posizione ricevuta
 getLoc = Cerca vicino a te
 users.posClass = Posizione in classifica
 no.img = Nessuna Immagine
@@ -282,3 +282,7 @@ rec.short = Recensione troppo corta
 rec1 = Nessun testo inserito
 rec2 = Il tuo commento sar\u00e0 approvato da un amministratore
 act.log = Account attivato, esegui il login
+refine=Raffina la ricerca
+most.visited=Pi\u00f9 visitati
+near=Vicino a
+place=Inserisci il luogo ...
