--- a/src/java/Resources/string_en_GB.properties
+++ b/src/java/Resources/string_en_GB.properties
@@ -285,3 +285,8 @@ refine=Refine search
 most.visited=Most visited
 near=Near
 place=Insert place ...
+fast=Fast Food
+giap=Japanese
+thai=Thai
+stea=Steak House
+rec.your=You cannot review your restaurant
