--- a/src/java/Resources/string_it_IT.properties
+++ b/src/java/Resources/string_it_IT.properties
@@ -286,3 +286,7 @@ refine=Raffina la ricerca
 most.visited=Pi\u00f9 visitati
 near=Vicino a
 place=Inserisci il luogo ...
+fast=Fast Food
+giap=Giapponese
+thai=Thailandese
+stea=Steak House
